# TextVisualizer

./: .gitignore  README.md  examples.ipynb  requirements.txt  setup.cfg
docs/: conf.py  index.rst  modules.rst  textvisualizer.bigramGraph.rst  textvisualizer.bubbleChart.rst  textvisualizer.corpus.rst  textvisualizer.correlation.rst  textvisualizer.frequency.rst  textvisualizer.lexicalDispersion.rst  textvisualizer.phraseNet.rst  textvisualizer.rst  textvisualizer.wordcloud.rst  textvisualizer.wordtree.rst
textvisualizer/: README.md  __init__.py  textvisualizer.py
textvisualizer/.ipynb_checkpoints/: __init__-checkpoint.py
textvisualizer/bigramGraph/: __init__.py  bigramGraph.py
textvisualizer/bubbleChart/: __init__.py  bubbleChart.py
textvisualizer/corpus/: __init__.py  corpus.py
textvisualizer/correlation/: __init__.py  correlation.py
textvisualizer/frequency/: __init__.py  frequency.py
textvisualizer/lexicalDispersion/: __init__.py  lexicalDispersion.py
textvisualizer/phraseNet/: __init__.py  phraseNet.py
textvisualizer/wordcloud/: __init__.py  wordcloud.py
textvisualizer/wordtree/: __init__.py  wordtree.py
