[metadata]
name = textvisualizer
version = attr: textvisualizer.__version__
url = https://github.com/ajdavidl/TextVisualizer
description = Python package for textual data visualization. 
long_description = file: README.md
long_description_content_type = text/markdown
author = Antonio David
license = GNU General Public License v3.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = NLP, data_visualization
classifiers =
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    matplotlib
    matplotlib-venn-wordcloud
    networkx
    nltk
    numpy<1.24
    plotly
    scikit-learn
    wordcloud
    wordtree
    yellowbrick

[options.packages.find]
exclude =
    docs*